--- a/_posts/2024-08-15-hcllm-acl2024.md
+++ b/_posts/2024-08-15-hcllm-acl2024.md
@@ -5,7 +5,8 @@ date: 2024-08-15 23:59:59
 description: Our paper, where we investigate to what extent we can use generative large language models in motivational interviewing chatbots to generate precise and variable reflections, is accepted to be published in the proceedings of the Human-Centered Large Language Modelling Workshop within ACL2024.
 tags: conference, proceedings,
 categories: publication presentation
-thumbnail: assets/img/news/2024-08-15/thumbnail.jpg
+thumbnail: assets/img/posts/2024-08-15/thumbnail.jpg
+featured: false
 ---
 
 Our paper, where we investigate to what extent we can use generative large language models in motivational interviewing chatbots to generate precise and variable reflections, is accepted to be published in the proceedings of the Human-Centered Large Language Modelling Workshop within the 62nd Annual Meeting of the Association for Computational Linguistics. The publication also gained a spot in the workshop for a poster presentation, which is going to take place on August 15, 2024.
@@ -29,8 +30,9 @@ Motivational Interviewing is a counselling style that requires skillful usage of
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/img/news/2024-08-15/1.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/img/posts/2024-08-15/1.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
-    <div class="col-sm mt-3 mt-md-0"></div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.liquid loading="eager" path="assets/img/posts/2024-08-15/2.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}</div>
     <div class="col-sm mt-3 mt-md-0"></div>
 </div>
