added a paper to the bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -88,6 +88,17 @@
   bibtex_show = {true}
 }
 
+@article{homberg2022impact,
+  author = {{van den Homberg}, Marc and Margutti, Jacopo and Basar, Erkan and Wagemaker, Jurjen},
+  title = {Enriching impact data by mining digital media},
+  journal = {UN Global Assessment Report on Disaster Risk Reduction},
+  year = {2022},
+  html = {https://www.undrr.org/publication/enriching-impact-data-mining-digital-media},
+  pdf = {https://www.undrr.org/media/79967/download},
+  abstract = {This contributing paper explores the opportunities offered by digital media mining to complement impact databases. Impact data on past disasters caused by natural hazards (in short, impact data) are of paramount importance for several applications. These include advocacy for investments in disaster risk reduction (DRR) and providing and evidence base for new policies. It is challenging, however, to create, sustain, and increase the adoption of an impact database with sufficient quality for different applications in humanitarian response and DRR. Online newspapers, both national and local ones, tend to cover small disasters more than some institutional databases that focus only on disasters above a particular threshold impact. Mining data from these sources offer a means to complement existing databases. This paper indicates that leading openly available databases have their different strengths and weaknesses. Mining digital newspapers helps shed light on data discrepancies given by different database. In the case studies, the enriched impact database was used to validate a hydrological model, particularly in defining triggers and improving monitoring. The study focused on sudden-onset disasters and further research will be needed to understand how mining can be used for slow-onset disasters such as droughts. Big data and modern information processing systems can also further improve operational excellence in humanitarian applications.},
+  bibtex_show = {true}
+}
+
 % ------------------- 2021
 
 @inproceedings{hendrickx2021pica,
