adjustments and improvements on previous news posts

--- a/_posts/2024-08-15-hcllm-acl2024.md
+++ b/_posts/2024-08-15-hcllm-acl2024.md
@@ -3,14 +3,14 @@ layout: post
 title: Publication and Poster at HCLLM at ACL2024
 date: 2024-08-15 23:59:59
 description: Our paper, where we investigate to what extent we can use generative large language models in motivational interviewing chatbots to generate precise and variable reflections, is accepted to be published in the proceedings of the Human-Centered Large Language Modelling Workshop within ACL2024.
-tags: conference proceedings
+tags: proceedings poster conference
 categories: publication presentation
 thumbnail: assets/img/posts/2024-08-15/thumbnail.jpg
 tabs: true
 featured: false
 ---
 
-Our paper, where we investigate to what extent we can use generative large language models in motivational interviewing chatbots to generate precise and variable reflections, is accepted to be published in the proceedings of the Human-Centered Large Language Modelling Workshop within the 62nd Annual Meeting of the Association for Computational Linguistics. The publication also gained a spot in the workshop for a poster presentation, which is going to take place on August 15, 2024.
+Our paper, where we investigate to what extent we can use generative large language models in motivational interviewing chatbots to generate precise and variable reflections, is accepted to be published in the proceedings of the [Human-Centered Large Language Modelling Workshop](https://hucllm-workshop.github.io/) within the [62nd Annual Meeting of the Association for Computational Linguistics](https://2024.aclweb.org). The publication also gained a spot in the workshop for a poster presentation, which is going to take place on August 15, 2024, in Bangkok, Thailand.
 
 Read the paper at [https://aclanthology.org/2024.hucllm-1.4.pdf](https://aclanthology.org/2024.hucllm-1.4.pdf)
 
@@ -58,7 +58,11 @@ Basar, E., Hendrickx, I., Krahmer, E., de Bruijn, G., & Bosse, T. (2024). [To Wh
         {% include figure.liquid loading="eager" path="assets/img/posts/2024-08-15/1.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.liquid loading="eager" path="assets/img/posts/2024-08-15/2.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.liquid loading="eager" path="assets/img/posts/2024-08-15/2.png" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
     <div class="col-sm mt-3 mt-md-0"></div>
 </div>
+
+---
+
+Find and like this news on [<i class="fa-brands fa-linkedin"></i> LinkedIn](https://www.linkedin.com/posts/activity-7228710764792954880-8-sY){:target="_blank"}
