--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,18 @@
 
+% ------------------- 2025
+
+@inproceedings{basar2025reflect,
+  author = {Basar, Erkan and Sun, Xin and Hendrickx, Iris and {de Wit}, Jan and Bosse, Tibor and {de Bruijn}, Gert{-}Jan and Bosch, Jos and Krahmer, Emiel},
+  title = {How Well Can Large Language Models Reflect? A Human Evaluation of LLM-generated Reflections for Motivational Interviewing Dialogues.},
+  booktitle = {Proceedings of the 31st International Conference on Computational Linguistics (COLING)},
+  year = {2025},
+  publisher = {International Committee on Computational Linguistics},
+  pages = {},
+  abstract = {Motivational Interviewing (MI) is a counseling technique that promotes behavioral change through reflective responses to mirror or refine client statements. While advanced large language models (LLMs) can generate engaging dialogues, challenges remain for applying them in a sensitive context such as MI. This work assesses the potential of LLMs to generate MI reflections via three LLMs: GPT-4, Llama-2, and BLOOM, and explores the effect of dialogue context size and integration of MI strategies for reflection generation by LLMs. We conduct evaluations using both automatic metrics and human judges on four criteria: appropriateness, relevance, engagement, and naturalness, to assess whether these LLMs can accurately generate the nuanced therapeutic communication required in MI. While we demonstrate LLMs' potential in generating MI reflections comparable to human therapists, content analysis shows that significant challenges remain. By identifying the strengths and limitations of LLMs in generating empathetic and contextually appropriate reflections in MI, this work contributes to the ongoing dialogue in enhancing LLM's role in therapeutic counseling.},
+  bibtex_show = {true},
+  selected={true}
+}
+
 % ------------------- 2024
 
 @inproceedings{basar2024extent,
@@ -135,8 +149,8 @@
   title = {The Connection between the Text and Images of News Articles: New Insights for Multimedia Analysis},
   booktitle = {Proceedings of the Twelfth Language Resources and Evaluation Conference (LREC)},
   year = {2020},
-  publisher = "European Language Resources Association",
-  pages = "4343--4351",
+  publisher = {European Language Resources Association},
+  pages = {4343--4351},
   html = {https://aclanthology.org/2020.lrec-1.535},
   pdf = {https://aclanthology.org/2020.lrec-1.535.pdf},
   abstract = {We report on a case study of text and images that reveals the inadequacy of simplistic assumptions about their connection and interplay. The context of our work is a larger effort to create automatic systems that can extract event information from online news articles about flooding disasters. We carry out a manual analysis of 1000 articles containing a keyword related to flooding. The analysis reveals that the articles in our data set cluster into seven categories related to different topical aspects of flooding, and that the images accompanying the articles cluster into five categories related to the content they depict. The results demonstrate that flood-related news articles do not consistently report on a single, currently unfolding flooding event and we should also not assume that a flood-related image will directly relate to a flooding-event described in the corresponding article. In particular, spatiotemporal distance is important. We validate the manual analysis with an automatic classifier demonstrating the technical feasibility of multimedia analysis approaches that admit more realistic relationships between text and images. In sum, our case study confirms that closer attention to the connection between text and images has the potential to improve the collection of multimodal information from news articles.},
